--- a/_config.yml
+++ b/_config.yml
@@ -1,87 +1,51 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: The HEART of Therapy
 email: bdalley@elliementalhealth.com
 description: >- 
- A human-centered therapy site featuring the HEART documentation framework.
+  A human-centered therapy site featuring the HEART documentation framework.
 url: "https://bdalley1.github.io"
 baseurl: "/heart-of-therapy"
 github_username: bdalley1
 minimal_mistakes_skin: default
 search: true
 
-# Build settings
-markdown: kramdown
+# Theme setup
 theme: minimal-mistakes-jekyll
-# Outputting
+
+markdown: kramdown
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 5
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Denver
 
 include:
   - _pages
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-gist
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
 author:
-  name   : "Bryan Dalley, M.E.d, ACMHC"
-  avatar : "/assets/images/bio-photo.jpg"  # Add an image there later!
-  bio    : "Therapist, writer, human. I believe good therapy starts with connection."
+  name   : "Bryan Dalley, ACMHC"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "Therapist, writer, human. I believe therapy—and notes—should feel human."
+  links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:bdalley@elliementalhealth.com"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/bdalley1"
+
+footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bdalley1"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope"
-      url: "mailto:bdalley@elliementalhealth.com"
-
-footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
 
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
@@ -89,10 +53,8 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
       share: true
       related: true
-  # _pages
   - scope:
       path: "_pages"
       type: pages
