--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin: default
 search: true
 
 # Theme setup
-theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes
 
 markdown: kramdown
 permalink: /:categories/:title/
