--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,9 @@
 main:
   - title: "Home"
     url: "/"
+  - title: "About"
+    url: "/about/"
   - title: "HEART Framework"
     url: "/heart-framework/"
-  - title: "Full HEART"
-    url: "/full-heart/"
-  - title: "HEART-Lite"
-    url: "/heart-lite/"
-  - title: "Conversion Tables"
-    url: "/conversion-tables/"
-  - title: "Modality Examples"
-    url: "/modality-examples/"
-  - title: "Manualized Models"
-    url: "/manualized-models/"
-  - title: "FAQ"
-    url: "/faq/"
   - title: "For Clients"
     url: "/for-clients/"
-  - title: "Articles"
-    url: "/articles/"
