--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Bryan Dalley, ACMHC"
+  name   : "Bryan Dalley, M.E.d., ACMHC"
   avatar : "/assets/images/bryan-photo.jpg"
   bio    : "Therapist, writer, human. I believe therapy—and notes—should feel human."
   links:
