--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,9 @@ author:
     - label: "Call Me"
       icon: "fas fa-phone"
       url: "tel:3854384909"
+      - label: "X (Twitter)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://twitter.com/bryan_dalley"
 
 footer:
   links:
@@ -49,6 +52,9 @@ footer:
     - label: "Call Me"
       icon: "fas fa-phone"
       url: "tel:3854384909"
+      - label: "X (Twitter)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://twitter.com/bryan_dalley"
 
 defaults:
   - scope:
