--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,13 @@ author:
     - label: "X (Twitter)"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://twitter.com/bryan_dalley"
-
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/bryan-dalley-32b5ab369?trk=contact-info"
+    - label: "Psychology Today"
+      icon: "fas fa-fw fa-user-md"
+      url: "https://www.psychologytoday.com/us/therapists/bryan-dalley-provo-ut/1538539"
+      
 footer:
   links:
     - label: "Email"
@@ -55,6 +61,12 @@ footer:
     - label: "X (Twitter)"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://twitter.com/bryan_dalley"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/bryan-dalley-32b5ab369?trk=contact-info"
+    - label: "Psychology Today"
+      icon: "fas fa-fw fa-user-md"
+      url: "https://www.psychologytoday.com/us/therapists/bryan-dalley-provo-ut/1538539"
 
 defaults:
   - scope:
