--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ footer:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:bdalley@elliementalhealth.com"
-    - label: "Call Me"
+    - label: "Call or Text Me"
       icon: "fas fa-phone"
-      url: "tel:3854384909"
+      url: "tel:8019603032"
     - label: "X (Twitter)"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://twitter.com/bryan_dalley"
