--- a/_config.yml
+++ b/_config.yml
@@ -36,18 +36,25 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:bdalley@elliementalhealth.com"
-    - label: "Call or Text Me"
+    - label: "Call Me"
       icon: "fas fa-phone"
-      url: "tel:8019603032"
+      url: "tel:+18019603032"
+   - label: "Text Me"
+     icon: "fas fa-comment-dots"
+     url: "sms:+18019603032"
+
       
 footer:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:bdalley@elliementalhealth.com"
-    - label: "Call or Text Me"
+    - label: "Call Me"
       icon: "fas fa-phone"
-      url: "tel:8019603032"
+      url: "tel:+18019603032"
+   - label: "Text Me"
+     icon: "fas fa-comment-dots"
+     url: "sms:+18019603032"
     - label: "X (Twitter)"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://twitter.com/bryan_dalley"
