--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Bryan Dalley, M.E.d., ACMHC"
+  name   : "Bryan Dalley, M.Ed., ACMHC"
   avatar : "/assets/images/bryan-photo.jpg"
   bio    : "Therapist, writer, human. I believe therapy—and notes—should feel human."
-  links_label: "Contact Me"
+  links_label: "Contact Me"  # ← Will now show properly
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
@@ -46,7 +46,18 @@ author:
       icon: "fas fa-comment-dots"
       url: "sms:+18019603032"
 
-      
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/bryan-dalley-32b5ab369/"
+
+    - label: "X (Twitter)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://twitter.com/bryan_dalley"
+
+    - label: "Psychology Today"
+      icon: "fas fa-fw fa-user-md"
+      url: "https://www.psychologytoday.com/us/therapists/bryan-dalley-provo-ut/1538539"
+
 footer:
   links:
     - label: "Email"
@@ -61,18 +72,17 @@ footer:
       icon: "fas fa-comment-dots"
       url: "sms:+18019603032"
 
-    - label: "X (Twitter)"
-      icon: "fab fa-fw fa-x-twitter"
-      url: "https://twitter.com/bryan_dalley"
-
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/bryan-dalley-32b5ab369/"
 
+    - label: "X (Twitter)"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://twitter.com/bryan_dalley"
+
     - label: "Psychology Today"
       icon: "fas fa-fw fa-user-md"
       url: "https://www.psychologytoday.com/us/therapists/bryan-dalley-provo-ut/1538539"
-
 
 defaults:
   - scope:
@@ -80,7 +90,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: true  # ← uses author block above
       read_time: true
       share: true
       related: true
@@ -90,10 +100,3 @@ defaults:
     values:
       layout: single
       author_profile: true
-
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
