--- a/_config.yml
+++ b/_config.yml
@@ -46,17 +46,8 @@ author:
       icon: "fas fa-comment-dots"
       url: "sms:+18019603032"
 
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/bryan-dalley-32b5ab369/"
-
-    - label: "X (Twitter)"
-      icon: "fab fa-fw fa-x-twitter"
-      url: "https://twitter.com/bryan_dalley"
-
-    - label: "Psychology Today"
-      icon: "fas fa-fw fa-user-md"
-      url: "https://www.psychologytoday.com/us/therapists/bryan-dalley-provo-ut/1538539"
+atom_feed:
+  hide: true
 
 # 🧼 This wipes the default feed icon by fully overriding footer.links
 footer:
