--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-homepage_layout: page
-
 title: The HEART of Therapy
 email: bdalley@elliementalhealth.com
 description: >- 
@@ -8,6 +6,7 @@ url: "https://bdalley1.github.io"
 baseurl: "/heart-of-therapy"
 github_username: bdalley1
 minimal_mistakes_skin: default
+layout: aqua
 search: true
 
 # Theme setup
@@ -21,6 +20,7 @@ timezone: America/Denver
 
 include:
   - _pages
+homepage_layout: page
 
 plugins:
   - jekyll-paginate
