--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
 url: "https://bdalley1.github.io"
 baseurl: "/heart-of-therapy"
 github_username: bdalley1
-minimal_mistakes_skin: aqua
+minimal_mistakes_skin: sunrise
 search: true
 
 # Theme setup
