--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ footer:
 
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/bryandalley
+      url: "https://www.linkedin.com/in/bryandalley"
       
     - label: "X (Twitter)"
       icon: "fab fa-fw fa-x-twitter"
