--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: The HEART of Therapy
 email: bdalley@elliementalhealth.com
 description: >- 
   A human-centered therapy site featuring the HEART documentation framework.
