--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ github_username: bdalley1
 minimal_mistakes_skin: mint
 search: true
 
+header:
+  nav: "main"
+
 # Theme setup
 remote_theme: mmistakes/minimal-mistakes
 
